--- a/Lab_WEB/style.css
+++ b/Lab_WEB/style.css
@@ -20,6 +20,9 @@ footer{
     clear:both;
     text-align:center;
 }
+.formu{
+    text-align: center;
+}
 .tabela{
     border: 2px solid black;
     text-align:center
