--- a/Lab_WEB/style.css
+++ b/Lab_WEB/style.css
@@ -1,3 +1,12 @@
+.strona{
+    display: none;
+    width: 100%;
+    min-height: 100%;
+}
+.aktywna{
+    display: block; 
+}
+
 table{
     margin:auto;
 }
